login scrollbar fix

--- a/assets/style/logIn.css
+++ b/assets/style/logIn.css
@@ -338,7 +338,6 @@ body {
   font-weight: 400;
   /* display: flex;
   justify-content: flex-start; */
-  width: 100%;
   top: 629px;
 }
 .passwordIconDiv,
